Adding admin.css, Updating SCSS/CSS build

--- a/lib/scss/main.scss
+++ b/lib/scss/main.scss
@@ -1,7 +1,7 @@
-@import '_colors';
-@import '_common-classes';
-@import '_clearfix';
-@import '_plugins';
-@import '_footable-metro';
-@import '_single-item';
-@import '_media-queries';
+@use 'assets/_colors';
+@use 'assets/_common-classes';
+@use 'assets/_clearfix';
+@use 'assets/_plugins';
+@use 'assets/_footable-metro';
+@use 'assets/_single-item';
+@use 'assets/_media-queries';
